--- a/info.yaml
+++ b/info.yaml
@@ -4,7 +4,7 @@ project:
   title:        "tt_primitiv_rotating_7segment"      # Project title
   author:       "fl00l"      # Your name
   discord:      "fl00l"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  description:  "primitiv_rotating_7segment"      # One line description of what your project does
   language:     "Wokwi" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
