--- a/info.yaml
+++ b/info.yaml
@@ -26,24 +26,24 @@ pinout:
   ui[7]: "IN7"
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
-  uo[4]: ""
-  uo[5]: ""
-  uo[6]: ""
-  uo[7]: ""
+  uo[0]: "OUT0"
+  uo[1]: "OUT1"
+  uo[2]: "OUT2"
+  uo[3]: "OUT3"
+  uo[4]: "OUT4"
+  uo[5]: "OUT5"
+  uo[6]: "OUT6"
+  uo[7]: "OUT7"
 
   # Bidirectional pins
-  uio[0]: "OUT0"
-  uio[1]: "OUT1"
-  uio[2]: "OUT2"
-  uio[3]: "OUT3"
-  uio[4]: "OUT4"
-  uio[5]: "OUT5"
-  uio[6]: "OUT6"
-  uio[7]: "OUT7"
+  uio[0]: ""
+  uio[1]: ""
+  uio[2]: ""
+  uio[3]: ""
+  uio[4]: ""
+  uio[5]: ""
+  uio[6]: ""
+  uio[7]: ""
 
 # Do not change!
 yaml_version: 6
